2000-12-20  Mo DeJong  <mdejong@redhat.com>

	* HACKING: Add new file that gives
	users a bit more hacking info.
	* INSTALL: Fix problems with CXXFLAGS
	and more autotools notes to HACKING.
	* README: Touch up minor errors,
	mention the HACKING file.
	* TODO: Update the TODO list with
	a number of issues TDB in 1.13.

2000-12-19  Mo DeJong  <mdejong@redhat.com>

	* autogen.sh: Pass the --ignore-deps
	flag to automake. We don't want to
	use depcomp, it breaks in too many
	places.
	* config.guess:
	* config.sub: Update guess and sub
	platform detection files.
	* configure.in:
	* jikes.spec: Set version to 1.13.
	* src/depcomp: Remove depcomp, now
	that we pass --ignore-deps to automake,
	it is no longer needed.

2000-12-03  Mo DeJong  <mdejong@redhat.com>

	* src/stream.cpp (ProcessInputUnicode): Use
	correct form of delete for an array variable.

2000-12-03  Mo DeJong  <mdejong@redhat.com>

	* src/jikesapi.cpp (compile): Revert
	change that allocated a Control object
	on the stack.

2000-12-03  Mo DeJong  <mdejong@redhat.com>

	* src/jikesapi.cpp (parseOptions): Revert
	the change that allocated an ArgumentExpander
	on the stack. Moving the object onto the
	stack masked test suite failures, causing
	them to pass even though memory was getting
	corrupted. From now on, we should never
	allocate an object on the stack.

2000-11-29  Mo DeJong  <mdejong@redhat.com>

	* src/jikesapi.h: Re-order instance declaration
	to avoid compiler warning.

2000-11-29  Eric Blake  <ebb9@email.byu.edu>

	* src/jikesapi.cpp (JikesAPI, parseOptions,
	cleanupOptions):  Initialize the parsedOptions
	member to avoid deleting uninitialized memory.
	Set the parsedOptions member to NULL in
	cleanupOptions to avoid a double delete of memory.
	Set the parsedOptions member inside parseOptions()
	so that it can be deleted later.

2000-11-27  Mo DeJong  <mdejong@redhat.com>

	* src/jikes.cpp (main): Don't attempt to
	manage memory returned by JikesAPI::parseOptions().