@@ -1,1 +1,5 @@
 SUBDIRS = doc src
+
+# Include the RPM spec file in the .tar ball
+
+EXTRA_DIST = jikes.spec
