@@ -82,6 +82,11 @@ tuple.h \
 unzip.h \
 zip.h
 
+# Include the java.g file in the .tar ball
+
+EXTRA_DIST = java.g
+
+
 # Special rule to remake autogenerated Java files
 
 jikespg:
@@ -94,5 +99,5 @@ jikespg:
 
 efence:
 	@rm -f jikes$(EXEEXT)
-	$(CXXLINK) -o jikes $(jikes_OBJECTS) -lstdc++ -lefence
+	$(CXXLINK) -o jikes$(EXEEXT) $(jikes_OBJECTS) -lstdc++ -lefence
 
